--- a/gasview.html
+++ b/gasview.html
@@ -21,6 +21,7 @@
     <link rel="stylesheet" href="jquery.bxslider/jquery.bxslider.css">
     <link rel="stylesheet" href="jquery.bxslider/jquery.bxslider.min.css">
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/responsive.css">
 </head>
 <body>
@@ -103,44 +104,124 @@
    </header>
    <div class="news-section">
        <div class="container">
-          <div class="col-md-4">
-           <ul class="bottom-form">
-               <li>
-                   <h3>STROMPREISE VERGLEICHEN</h3>
-                   <p>Vergleichen Sie jetzt mehrere tausend Tarife und sparen Sie bis zu 500 Euro pro Jahr!</p>
-                   <form action="">
-                      <div class="bottom-form-group">
-                       <input type="text" placeholder="ihre PLZ">
-                      </div>
-                       <div class="bottom-form-group">
-                        <select>
-                            <option>2000 Kwh</option>
-                            <option>3000 Kwh</option>
-                            <option>4000 Kwh</option>
-                            <option>5000 Kwh</option>
-                        </select>
+         
+        <div class="col-md-9 view-form animated flipInX">
+            <div class="row">
+               <div class="col-md-6">
+                <div class="form-group">
+                   <label class="control-label col-sm-4" for="email">Postleitzahl :</label>
+                   <div class="col-sm-8">
+                     <input type="email" class="form-control" id="email" placeholder="22089">
+                   </div>
+                 </div>
+                 <div class="form-group">
+                   <label class="control-label col-sm-4" for="email">Ort :</label>
+                   <div class="col-sm-8">
+                     <input type="email" class="form-control" id="email" placeholder="Glinde">
+                   </div>
+                 </div>
+                 <div class="form-group">
+                     <label class="control-label col-sm-4" for="pwd">Verbrauch:</label>
+                     <div class="col-sm-8">          
+                         <input type="text" name="receiver" id="" value="" placeholder="3500" />
+                     </div>
+                 </div>
+                 </div>
+                 <div class="col-md-6">
+                 <div class="form-group">
+                     <label class="control-label col-sm-4" for="email">Vertragslaufzeit:</label>
+                     <div class="col-sm-8">
+                       <select name="dropdown" id="dropdown">
+                           <option value="2000">bis 24 Monate</option>
+                           <option value="3500">bis 24 Monate</option>
+                           <option value="4250">bis 24 Monate</option>
+                           <option value="5000">bis 24 Monate</option>
+                       </select>
+                     </div>
+                  </div>
+                  <div class="form-group">
+                    <label class="control-label col-sm-4" for="pwd">Ihr aktueller Anbieter:</label>
+                    <div class="col-sm-8">          
+                      <select>
+                            <option value="">Energie Deutschland gmbh</option>
+                            <option value="">123energie - eine marke der pfalzwerke ag</option>
+                            <option value="">24/7 energie und kommunikation gmbh</option>
+                            <option value="">badenova ag & co. kg</option>
+                            <option value="">BayWa Okoenergie gmbh</option>
+                            <option value="">BayWa r.e. green energy products gmbh</option>
+                            <option value="">clubgas -eine marke der teleson energie gmbh</option>
+                            <option value="">die energievorsorger gmbh</option>
+                            <option value="">dig deutsche industriegas gmbh</option>
+                            <option value="">E WIE EINFACH Gmbh</option>
+                            <option value="">E.VITA GMBH</option>
+                            <option value="">Econsum Gmbh</option>
+                            <option value="">eins energie in sachsen gmbh & Co.kg</option>
+                            <option value="">Elektrizitatswerke Schonau Vertriebs gmbh</option>
+                            <option value="">EMB Energie Mark Brandenburg Gmbh</option>
+                            <option value="">Enbw energie baden-wurttemberg AG</option>
+                            <option value="">ener.my gmbh</option>
+                            <option value="">energie und Wasser Wahlstedt/Bad segeberg gmbh & co.kg</option>
+                            <option value="">Energie von nebenan - eine marke der stadtwerke herne ag</option>
+                            <option value="">Energie Wie Wir - eine marke der swb vertrieb breman gmbh</option>
+                            <option value="">Energie - und Wasserwerke bautzen gmbh</option>
+                            <option value="">Energiegenossenschaft Rhein-Ruhr eG</option>
+                            <option value="">energie GUT gmbh</option>
+                            <option value="">Energiehoch3 gmbh</option>
+                            <option value="">Energieversorgung Filstal gmbh & Co. KG</option>
+                            <option value="">Energieversorgung pirna gmbh</option>
+                            <option value="">energieversprechen.de - eine marke der stadtwerke troisdorf</option>
+                            <option value="">Energrun -eine Marke der firstcon gmbh</option>
+                            <option value="">enno energie gmbh</option>
+                            <option value="">enstroga AG</option>
+                            <option value="">Entega energie gmbh</option>
+                            <option value="">envitra - eine marke der deg deutsche energie gmbh</option>
+                            <option value="">eprimo gmbh</option>
+                            <option value="">eswe versorgungs AG</option>
+                            <option value="">EVD Energieversorgung Deutschland gmbh</option>
+                            <option value="">EWE vertrieb gmbh</option>
+                            <option value="">Extra energie gmbh</option>
+                            <option value="">Fair energie gmbh</option>
+                            <option value="">First Utility gmbh</option>
+                            <option value="">Fluxenergie - eine marke der EGRR gmbh</option>
+                            <option value="">Funfwerke gmbh & co.kg</option>
+                            <option value="">Fuxx-die sparenergie gmbh</option>
+                            <option value="">Gas In gmbh</option>
+                            <option value="">Gas-und Warmedienst Bornsen gmbh</option>
+                            <option value="">Gas.de Versorgungsgesellschaft mbh</option>
+                            <option value="">Gaspar - eine marke der rhenag Rheinische Energie AG</option>
+                            <option value="">Gemeindewerke Hohenwestedt gmbh</option>
+                            <option value="">GGEW Gruppen-Gas-und Elektrizitatswerk Bergstrabe AG</option>
+                            <option value="">goldgas gmbh</option>
+                            <option value="">greenline - alternative energien gmbh</option>
+                            <option value="">Greenpeace Energy eg</option>
+                            <option value="">Gruner Funke - eine marke der fux-die sparenergie gmbh</option>
+                            <option value="">Grunwelt - eine marke der gas.de versorgungsgesellschaft mbh</option>
+                            <option value="">hamburg energie gmbh</option>
+                            <option value="">Idealenergie - eine marke der 365 ag</option>
+                            <option value="">ideo energie gmbh</option>
+                            <option value="">immergrun energie - eine marke der 365 ag</option>
+                            <option value="">innogy se</option>
+                            <option value="">klickenergie gmbh & co.kg</option>
+                            <option value="">knauber erdgas gmbh</option>
+                            <option value="">lachgas - eine marke der e:veen energie eg</option>
+                            <option value="">lekker energie gmbh</option>
+                            <option value="">leu energie gmbh & co.kg</option>
+                            <option value="">lichtblick se</option>
+                      </select>
                     </div>
-                       <a href="#" class="button" type="button">Jetzt vergleichen</a>
-                   </form>
-               </li>
-               <li>
-                   <h3>STROMPREISE VERGLEICHEN</h3>
-                   <p>Vergleichen Sie jetzt mehrere tausend Tarife und sparen Sie bis zu 500 Euro pro Jahr!</p>
-                   <form action="">
-                       <div class="bottom-form-group">
-                       <input type="text" placeholder="ihre PLZ">
-                      </div>
-                       <div class="bottom-form-group">
-                        <select>
-                            <option>2000 Kwh</option>
-                            <option>3000 Kwh</option>
-                            <option>4000 Kwh</option>
-                            <option>5000 Kwh</option>
-                        </select>
-                    </div>
-                       <a href="#" class="button" type="button">Jetzt vergleichen</a>
-                   </form>
-               </li>
+                  </div>
+                  <div class="form-group">
+                   <label class="control-label col-sm-4" for="email">Ihr aktueller Tarif :</label>
+                   <div class="col-sm-8">
+                     <input type="email" class="form-control" id="email" placeholder="">
+                   </div>
+                 </div>
+                 </div>
+                 <p class="center"><a href="stromview.html" class="button" type="button">Jetzt vergleichen</a></p>
+            </div>
+        </div>
+        <div class="col-md-3">
+           <ul class="bottom-form animated slideInRight">
                <li>
                    <h3>Geprüft und Zertifiziert</h3>
                    <p>Zertifiziert wurde die Servicequalität des Unternehmens TopTarif, das die Rechnergrundlage bildet.</p>
@@ -148,60 +229,21 @@
                    <h3><span class="fa fa-phone"></span> 0800/72 45 816 </h3>
                </li>
            </ul>   
-          </div>
-        <div class="col-md-8 news">
-            <ul class="news-list">
-                <li>
-                    <a href=""><h3>Atomausstieg: Energieversorger sollen allein für Kosten aufkommen</h3></a>
-                    <p>Bis zum Jahr 2022 will Deutschland die letzten Atomkraftwerke vom Netz nehmen und endgültig aus der Kernkraft aussteigen.</p>
-                </li>
-                <li>
-                    <a href=""><h3>Strompreis-Erhöhungen in Berlin und Hamburg: Stromanbieter Vattenfall zieht die Preise an</h3></a>
-                    <p>Bis zum Jahr 2022 will Deutschland die letzten Atomkraftwerke vom Netz nehmen und endgültig aus der Kernkraft aussteigen.</p>
-                </li>
-                <li>
-                    <a href=""><h3>Gasanbieter dürfen Gaspreis-Erhöhungen nicht beliebig weitergeben</h3></a>
-                    <p>Bis zum Jahr 2022 will Deutschland die letzten Atomkraftwerke vom Netz nehmen und endgültig aus der Kernkraft aussteigen.</p>
-                </li>
-                <li>
-                    <a href=""><h3>Stromanbieter Vattenfall verzeichnet Milliardenverlust wegen Kohle- und Kernkraft</h3></a>
-                    <p>Der schwedische Stromversorger Vattenfall hat mehr denn je mit der Energiewende zu kämpfen.</p>
-                </li>
-                <li>
-                    <a href=""><h3>Stromkosten: Zusammensetzung der Netzentgelte soll transparenter werden</h3></a>
-                    <p>Die EEG-Umlage hat in den vergangenen Jahren erheblich zu einem Anwachsen der Strompreise beigetragen, weshalb ihr Einsatz zunehmend kritisch betrachtet wird.</p>
-                </li>
-                <li>
-                    <a href=""><h3>Ökostrom: „Grüner Strom Label“-Zertifizierung unterliegt strengeren Kriterien</h3></a>
-                    <p>Immer mehr Stromanbieter kommen dem wachsenden Wunsch vieler Stromverbraucher entgegen und bieten regenerativ erzeugten Strom aus erneuerbaren Energien an.</p>
-                </li>
-                <li>
-                    <a href=""><h3>Fracking: USA sind größter Erdöl-Produzent und exportieren wieder im großen Stil</h3></a>
-                    <p>Die umstrittene Schiefergas- und Ölförderung durch Fracking hat den USA zu neuer Größe verholfen.</p>
-                </li>
-                <li>
-                    <a href=""><h3>Stromanbieter: Ein Drittel der Verbraucher plant Wechsel des Stromversorgers</h3></a>
-                    <p>Zum Jahreswechsel 2016 haben viele Stromanbieter die Strompreise für ihre Kunden erhöht.</p>
-                </li>
-                <li>
-                    <a href=""><h3>Gaspreis-Erhöhungen: Bei Preisanpassungen Sonderkündigungsrecht nutzen</h3></a>
-                    <p>Nicht nur die Ostküste der USA wurde an diesem Wochenende von einem heftigen Wintereinbruch heimgesucht.</p>
-                </li>
-                <li>
-                    <a href=""><h3>Strompreise: Höhe von Abgaben und Umlagen auf Rekordniveau angestiegen</h3></a>
-                    <p>Die Einkaufspreise für Strom an der Börse sind in den vergangenen Jahren stark gefallen.</p>
-                </li><!--
-                <li>
-                    <a href=""><h3>Gasförderung durch Fracking: BGR-Entwarnung sorgt für Kritik</h3></a>
-                    <p>Die unkonventionelle Gasfördermethode Fracking ist in Deutschland höchst umstritten.</p>
-                </li>
-                <li>
-                    <a href=""><h3>Kohleausstieg bis 2050: Energieminister Gabriel will keinen „Masterplan“</h3></a>
-                    <p>Bundeswirtschafts- und Energieminister Sigmar Gabriel (SPD) betonte auf der vom Handelsblatt organisierten Jahrestagung der Energiewirtschaft am Dienstag in Berlin, dass er einen Ausstieg aus der Kohleverstromung noch vor 2050 nicht für ausgeschlo... weiterlesen</p>
-                </li>-->
-            </ul>
         </div>
-           
+        <div class="row">
+        <div class="col-md-12">
+            <div class="details">
+                <h2>Gas</h2>
+                <h3>Viele Gasanbieter und Stromanbieter erhöhen in regelmäßigen Abständen ihre Preise.</h3>
+                <p>Grundversorger und Stadtwerke erheben oft sehr hohe Gas- und Strompreise, da sie durch diese Einnahmen andere Betriebe wie Hallenbäder oder kulturelle Einrichtungen mitfinanzieren. Viele Haushalte können oder wollen diese Extrakosten beim Strom und beim Gas aber nicht zahlen. Durch einen Strompreisvergleich und einen Gaspreisvergleich können sie ermitteln, welche Preise andere Unternehmen für Energie erheben, und welche Anbieter günstige Strom- und Gaspreise anbieten. Mit dem Vergleichsrechner auf Tarifo.de können sie ermitteln wie viel sie durch einen Wechsel zu einem alternativen Gas- oder Stromanbieter sparen können.</p>
+                <p>Nicht erst seit der Atomkatastrophe von Fukushima ist es vielen Verbrauchern wichtig anstatt konventionell erzeugten Strom Ökostrom zu beziehen. Ökostrom wird aus erneuerbaren Energien gewonnen. Er ist daher endlos verfügbar und schont die Umwelt. Dafür ist Ökostrom oft teurer als konventionell erzeugter Strom. Es gibt jedoch auch beim Ökostrom große Preisunterschiede zwischen verschiedenen Ökostromanbietern. Durch den Ökostrom-Preisvergleich auf Tarifo.de können sie herausfinden welcher Versorger günstigen Ökostrom in ihrer Region anbietet.</p>
+                <ul>
+                    <li><a href="">Zum Stromvergleich</a></li>
+                    <li><a href="">Zum Gasvergleich</a></li>
+                </ul>
+            </div>
+        </div>
+        </div>
        </div>
    </div>
    <footer>
